[gd_scene load_steps=10 format=2]

[ext_resource path="res://Containers/TasksContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Containers/TasksListContainerPanel.gd" type="Script" id=2]
[ext_resource path="res://Containers/ToggleButton.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=8]
resource_name = "change_tasks_list"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MorningTasksContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MorningTasksContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 200 ), Vector2( 2000, 200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AfternoonTasksContainer:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AfternoonTasksContainer:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1648, 200 ), Vector2( 176, 200 ) ]
}

[node name="TasksListContainerPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )
script = ExtResource( 2 )

[node name="ToggleButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.0
margin_top = 116.0
margin_right = 24.0
margin_bottom = 154.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="MorningTasksContainer" parent="." instance=ExtResource( 1 )]
margin_top = 200.0
margin_bottom = -80.0

[node name="Title" parent="MorningTasksContainer" index="0"]
margin_top = 9.0
margin_right = 116.5
margin_bottom = 71.0
text = "Ma√±ana"

[node name="AfternoonTasksContainer" parent="." instance=ExtResource( 1 )]
margin_left = -1648.0
margin_top = 200.0
margin_right = -2016.0
margin_bottom = -80.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Title" parent="AfternoonTasksContainer" index="0"]
margin_left = -75.5
margin_top = 9.0
margin_right = 75.5
margin_bottom = 71.0
text = "Tarde"

[node name="Animations" type="AnimationPlayer" parent="."]
anims/change_tasks_list = SubResource( 8 )

[connection signal="pressed" from="ToggleButton" to="." method="_on_ToggleButton_pressed"]

[editable path="ToggleButton"]
[editable path="MorningTasksContainer"]
[editable path="AfternoonTasksContainer"]
